# google-workspace-admin-tools

./: # Code Citations.md  .env.example  .env.oauth2  .gitignore  .gitignore_new  .security_key  ALL_FIXED_FINAL.md  ATTRIBUTEERROR_FIX_REPORT.md  AdminTeamTools_v2.2.0.spec  AdminTeamTools_v2.2.0_improved.spec  CHANGELOG.md  COMPILATION_REPORT.md  CONTRIBUTING.md  DECOMPOSITION_SUMMARY.md  DOCUMENT_ACCESS_QUICK_GUIDE.md  DOCUMENT_MANAGEMENT_IMPLEMENTATION_REPORT.md  Dockerfile  FINAL_USER_CREATION_FIX.md  GITHUB_DEPLOY_INSTRUCTIONS.md  GITHUB_PUBLISHING_GUIDE.md  GITHUB_READY.md  GROUP_REMOVAL_FIX_REPORT.md  IMPLEMENTATION_REPORT.md  LICENSE  LOADING_OPTIMIZATION_REPORT.md  MYTEAM_INTEGRATION_REPORT.md  Makefile  OAUTH2_FIX_REPORT.md  OU_IMPLEMENTATION_COMPLETE.md  OU_MANAGEMENT_FEATURE.md  PROJECT_STATUS_FINAL.md  PROJECT_STRUCTURE.md  README.md  READY_FOR_GIT_RELEASE.txt  REFACTORING_COMPLETE_FINAL.md  RELEASE_NOTES_v2.0.7.md  RELEASE_NOTES_v2.2.0.md  SECONDARY_EMAIL_FIX_COMPLETE.md  SECURITY.md  SOLUTION_REPORT.md  (+108 more)
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  release.yml
AdminTeamTools_v2.2.0_Final_Deploy/: README.md
AdminTeamTools_v2.2.0_Final_Deploy/config/: freeipa_config.json  settings.json
archive/: README.md
archived_files/: CLEANUP_SUCCESS.md  README.md
archived_files/documentation_reports/: FREEIPA_GROUPS_FIX_REPORT.md  FREEIPA_GROUPS_VISIBILITY_FIX.md  FREEIPA_IMPLEMENTATION_REPORT.md  FREEIPA_INTEGRATION_COMPLETE.md  FREEIPA_INTEGRATION_SUMMARY.md  FREEIPA_QUICKSTART.md  FREEIPA_REAL_GROUPS_FIX.md  FREEIPA_UPDATE_REPORT.md  FREEIPA_ИСПРАВЛЕНО.md  UX_IMPROVEMENTS_GUIDE.md  (+4 more)
config/: freeipa_config.json.template  freeipa_config_template.json  settings.json.template
docs/: API_SETUP.md  ASYNC_COROUTINE_FIX.md  BUGFIXES_v2.0.5.md  CALENDAR_MENU_DISABLED.md  CHANGELOG.md  COMPACT_DESIGN_UPDATE.md  COMPACT_STYLES_GUIDE.md  CONTRIBUTING.md  COROUTINE_ERRORS_FIXED.md  DOCUMENT_MANAGEMENT_GUIDE.md  EMPLOYEE_FILTERS_FIXES_v2.0.1.md  ENABLE_DRIVE_API.md  ERROR_HANDLING.md  FINAL_RELEASE_INSTRUCTIONS.md  FINAL_SOLUTION_REPORT.md  FINAL_v2.0.2_READY.md  FREEIPA_CONNECTION_TEST_REPORT.md  FREEIPA_GROUPS_LIST_FEATURE.md  FREEIPA_GUI_GUIDE.md  FREEIPA_INTEGRATION_COMPLETE.md  FREEIPA_INTEGRATION_GUIDE.md  FREEIPA_KERBEROS_SOLUTION.md  FREEIPA_STUB_FIXED.md  FULL_SYSTEM_CHECK_REPORT.md  GIT_SETUP_GUIDE.md  GIT_WORKFLOW.md  GMAIL_API_SETUP.md  GMAIL_INTEGRATION_COMPLETE.md  GOOGLE_API_SETUP.md  GROUP_CHANGE_TIMING_GUIDE.md  GROUP_MEMBERS_403_FIX.md  GROUP_MEMBERS_IMPLEMENTATION_REPORT.md  GROUP_MEMBERS_MANAGEMENT_GUIDE.md  MODERNIZATION_COMPLETE.md  MODULAR_STRUCTURE.md  OAUTH2_PRIORITY_SETUP.md  OAUTH2_QUICK_TEST.md  OAUTH2_TROUBLESHOOTING.md  OU_SELECTION_GUIDE.md  OU_USER_CREATION_GUIDE.md  (+26 more)
documentation/: FOLDER_STRUCTURE_v2.0.2.md  IMPORT_FIX_v2.0.2.md  README_GITHUB.md  RELEASE_v2.0.3_READY_FOR_GIT.md  STATUS_WORKING.md  UPDATE_v2.0.2_COMPLETE.md
release/: README.md  README_INSTALL.md  README_RELEASE.md  Запуск Admin Team Tools.bat
scripts/: README.md  auto_commit.ps1  build_nuitka.py  build_release.py  fix_imports.py  fix_manual_test_imports.py  fix_oauth2_scopes.py  git_release_simple.ps1  release_v2.0.3.bat  release_v2.0.3.ps1  release_v2.0.3.py  setup_gmail_api.py  setup_real_users.py  update_oauth_token.py
src/: __init__.py  auth.py  config.py
templates/: oauth2_welcome.txt
tests/: check_drive_api.py  compact_windows_demo.py  conftest.py  demo_sputnik_calendar.py  demo_window_comparison.py  test_calendar_button.py  test_compact_styles.py  test_dialog_standalone.py  test_direct_import.py  test_document_fix.py  test_document_management.py  test_drive_access.py  test_employee_window.py  test_error_handling.py  test_file_paths.py  test_filters.py  test_fixed_parameters.py  test_gmail_api.py  test_group_add.py  test_group_members.py  test_group_permissions.py  test_integration.py  test_members_loading.py  test_module_import.py  test_new_dialog.py  test_optimized_dialog.py
(+178 files in other folders)
